@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.40 2000/02/04 20:57:31 stelian Exp $
+$Id: CHANGES,v 1.41 2000/02/08 12:22:42 stelian Exp $
 
 Changes between versions 0.4b13 and 0.4b14 (released ????????????????)
 ======================================================================
@@ -23,6 +23,10 @@ Changes between versions 0.4b13 and 0.4b14 (released ????????????????)
 
 5.	Added a REPORTING-BUGS file in order to provide a guide
 	on how to correctly report a bug in dump/restore.
+
+6.	Fixed a restore problem when restoring a hard link to an inode
+	having the immutable or append-only attribute set. Thanks to
+	Ambrose Li <acli@mingpaoxpress.com> for submitting the patch.
 
 Changes between versions 0.4b12 and 0.4b13 (released January 21, 2000)
 ======================================================================
